syntax = "proto3";
option csharp_namespace = "Research_GRPC";

service UsersHandler {
	rpc GetUsers(UserNumber) returns(UserModel);
	rpc GetAllUsersStream(Empty) returns(stream UserModel);
	rpc GetAllUsersCollection(Empty) returns(UserQuery);
	rpc AddUser(UserModel) returns(UserNumber);
}

message Empty{ }

message UserNumber {
	int32 id = 1;
}

message UserQuery{
	repeated UserModel model = 1;
}

message UserModel {
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	string password = 4;
}